--- a/test.tex
+++ b/test.tex
@@ -1113,62 +1113,44 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-Thus, Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: \textit{why one asks question ?}
+For many, cosmology is the hardiest chapter of physics. This modern, negative, opinion is in fact in contrast with the ancient culture, for which \textit{the cosmology is the first of all sciences, so must be the simplest}. In the original meaning of the word `revolution`, it is a return to the source of Science, the `all is whole number` of Pythagoras. Even the degenerate form of topological or holographic relations, the simplest diophantine equations, the Holic Principle, shows direct pertinence. In particular, it emphasizes the 30 dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string dimensions and 4 of usual space-time.
 
-The present article confirms the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-physics, taking the electron reduced Compton wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1D-2D holographic relations, respecting the topologico-algebric Bott period}.
-
-The pertinence of the Topological Axis confirms the importance of the electron wavy propagation. While it is claimed that String Theory do not connect with experiment, this is its rehabilitation, including the \textit{tachyonic} bosonic version, since the canonical dimension 26 appears to characterize the observable universe radius $R$, together with the gravitaton mass. Hence $c$ cannot be a maximal speed: it is shown both by logic (it is far too slow) and by the quantum non-locality.
-
-Indeed, excluding $c$ from the simplest tool of elementary physics, the prospective dimensional analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the Topological Axis, whose initial asymmetry suggested directly the existence of a Grandcosmos.
-
-The application of the old direct scientific method, looking for fine tuning between physical parameters lead to a return to the Perfect Cosmological Principle implying a steady-state Cosmos, confirmed by holographic relations. The standard cosmological principle was unduly limited to spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
-not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an absolute clock, the dephasage of coherent oscillations between quasars being ruled by the tachyonic celerity.
-
-The standard Holographic Principle must be generalized to wavelengths others than the Planck
-length, in particular the topon, the visible Universe wavelength, in 1D holography, which breaks
-another taboo of current thinking: the Planck wall, by an enormous factor, about $10^{61}$, resolving the
-vacuum energy dilemma factor $10^{122}$, and sustaining the Oscillatory bounce model which unfies the two main cosmologies.
-
-Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. 
-
-When Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. 
-
-The present day string theory seems to lead to a Multiverse, while this string theory is criticised \cite{Woigt}. However, the Topological Axis (Fig. 1) rehabilitates definitely the most controversial \textit{tachyonic} bosonic string theory.
-
-This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So, while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the `Inverse Anthropic Principle` is more logical, stating that an all-deterministic single Cosmos implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of this article is that the Cosmos is a computer. A common point with the brain is the multi-base character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a dogmatic community. The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least parts of these works are very pertinent.
-
-The high precision of some relations, untill ppb, prove that the traditional scientific thinking is not at all baffled by
-the physical parameter values, meaning they are mere mathematical constants. In this respect, the
-high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with lesser precision, the background temperature, must be saluted as decisive achievements.
-
-The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
-
-The simplest topological equations, the equality between dimensionless topological varieties,
-circumference, area, volume... appear to apply in cosmology, which, for many, seems to be the hardiest
-chapter of physics. This modern, negative, opinion is in fact in contrast with the ancient culture, for
-which \textit{the Cosmology is the first of all science, so must be the simplest}. In the original meaning of the
-word `revolution`, it is a return to the source of Science, the `all is whole number` of Pythagoras.
-Even the degenerate form of topological or holographic relations, the simplest diophantine
-equations, the Holic Principle, shows direct pertinence. In particular, it emphasizes the 30
-dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string
-dimensions and 4 of usual space-time.
-
-In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Atiyah1}: \textit{`Nobody has
-ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
-should be worried what the Universe would be if $a$ were not 137.035999...}` This is a definite
-rejection of the Multiverse Hypothesis.
-
-appears, not only in the general organisation of the Topological Axis, but also by unifying in particular the gauge bosons, so confirming the Standard Model of Particle Physics. However gluons must be massive, an hypothesis which is independently seriously considered \cite{Larin}.
+The distinction between Length and Time must be emphasized, as
+Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing $c$ =
+1, impeded the fact that the Hubble-Lema\^{i}tre radius $R$ is a trivial length, directly given by the prospective $c$-free dimensional analysis, which gives also the cosmic temperature and the cosmic super-cycle period.
 
 This means also that the International System must go back to only three fundamental unities,
-Mass, Length and Time. The distinction between Length and Time must be emphasized, as
-Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confusion, by writing $c$ =
-1, impeded the fact that the Hubble-Lema\^{i}tre radius $R$ is a trivial length.
+Mass, Length and Time.
+
+The Hierarchy and Computation principles presented in section 1 are confirmed both by the Topological axis, the geo-dimensional Universe-Grandcosmos Couple, and the mononomial relations (i.e. merely products of parameters). These accurate mononomial relations reunifies Mathematics and Physics. The precision reaches the ppb domain: they cannot be due to chance. This shows how the so-called 'free parameters' are misnamed: they are imposed by Nature proving the Cosmos Unicity. As Atiyah wrote \cite{Atiyah1}: \textit{`Nobody has ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one should be worried what the Universe would be if $a$ were not 137.035999...}` This is a \textit{definite refutation} of the Multiverse Hypothesis. In this respect, the high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with lesser precision, the background temperature, must be saluted as decisive achievements.
+
+The pertinence of these simple mononomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergence}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, revealing and troubling that this term \textit{immergence} is a neologism.
+
+The Cosmos concept has long been forgotten. This is the reason why quantum physics is not really understood. Indeed, the simple fact that the propagation of anything, light or matter, is wavy, while the reception is a quantum, was a central mystery along the last century. This simple fact induces non-locality, so the necessary intervention of cosmology. Moreover, the optimal utilisation of the wavy propagation is holography, whose formalism is similar to the quantum one. Thus it is logical to find holographic relations in cosmology. Moreover, the similitude between the formalisms of quantum physics and holography is so tight that the double-step holography is similar to the double step of any interaction: tachyonic propagation - non-local cosmic optimisation - local quantum reception.
+
+Thus tachyonic-holography physics is necessary. Hence, it was an error to reject the bosonic string theory under the pretext it involves tachyons \cite{Woigt}. Quite the contrary, it is an essential advantage. This is confirmed by the central importance of the bosonic dimension d = 26 in the Topological Axis, which is nothing that the extension to smaller numbers of the Double Large Number coincidence, that only Eddington interpreted correctly, by rejecting the Single Bang model. Many invoked the temporal variation of the parameters, which is a negation of the idea that physics have universal laws. Finally, the expedient of the Anthropic Principle was imposed to the community by some leaders: this is definitely refuted in this article.
+
+Moreover, the standard Holographic Principle must be generalized to wavelengths others than the Planck
+length, in particular the topon, the visible Universe wavelength, in 1D holography, which breaks by an enormous factor, about $10^{61}$ a taboo of current thinking: the Planck wall, resolving the vacuum energy dilemma factor $10^{122}$, and sustaining the Oscillatory bounce model which unfies the two main cosmologies.
+
+This leads back to the main hypothesis of this article: the Cosmos is a computer, and the dimensionless parameters are calculation bases. A common point with the brain is precisely this \textit{multi-base} character, experienced in musical sensation. It is no chance that the parameters are encountered in the musical scales and DNA chain. Thus, Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: \textit{why one asks question ?} 
+
+Thus, \textit{intelligent life must be universal}. The famous Fermi question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a dogmatic community. This destroy the Darwin `accidental life` approach, a generally admitted so-called `theory` with too much missing links \cite{Chauvin}.
+
+The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least parts of these works are very pertinent. This follows the rejection (with the notable exception of Schrodinger) of Eddington\cite{Eddington} himself. Only Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. While he dared to apply the exclusion principle in cosmology. It is the basis of our Single Electron Cosmologic model (section 4.1) which rehabilitates once more his work. Also, fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. Moreover, it seems that no one realizes that the Eddington prediction for the baryon number in the visible Universe is so accurate. Note that many mocked the Eddington Large Number, not to speak of his number 137, completely rehabilitated by the monomonial relations.
+
+However, curiously, Eddington believed in the standard statistical interpretation. Thus, he did not reached the above conclusions. Also, at his epoch the holography was not discovered, and Eddington was far from imagine the Holic Principle. 
+
 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Conclusions: Cosmic Simplicity at work}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+The present article confirms the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-physics, taking the electron reduced Compton wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1D-2D holographic relations, respecting the topologico-algebric Bott period}.
+
+The application of the old direct scientific method, looking for fine tuning between physical parameters lead to a return to the Perfect Cosmological Principle implying a steady-state Cosmos, confirmed by holographic relations. The standard cosmological principle was unduly limited to spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an absolute clock, the dephasage of coherent oscillations between quasars being ruled by the tachyonic celerity.
+
 The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
 justifying the elimination of $c$, as in the Haas-Bohr model \cite{Sanchez1}. This corresponds to a Hubble constant 70.790
 (km/s)/Megaparsec, consistent with the recent measurement \cite{Bonvin}: 72(3) Megaparsec/(km/s), which
