--- a/test.tex
+++ b/test.tex
@@ -60,7 +60,7 @@ $^9$Lecturer at ENSA Paris Malaquais, France (retired). lgueroult@hotmail.com
 {\small\parbox{11cm}{%
 
 
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series d = 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with composite d quark and massive string, gluon, photon and graviton. The standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series d = 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with composite d quark and massive string, gluon, photon and graviton. The standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the Cosmic Microwave Background (CMB) temperature.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -1137,7 +1137,7 @@ This leads back to the main hypothesis of this article: the Cosmos is a computer
 
 Thus, \textit{intelligent life must be universal}. The famous Fermi question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a dogmatic community. This destroy the Darwin `accidental life` approach, a generally admitted so-called `theory` with too much missing links \cite{Chauvin}.
 
-The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least parts of these works are very pertinent. This follows the rejection (with the notable exception of Schrodinger) of Eddington\cite{Eddington} himself. Only Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. While he dared to apply the exclusion principle in cosmology. It is the basis of our Single Electron Cosmologic model (section 4.1) which rehabilitates once more his work. Also, fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. Moreover, it seems that no one realizes that the Eddington prediction for the baryon number in the visible Universe is so accurate. Note that many mocked the Eddington Large Number, not to speak of his number 137, completely rehabilitated by the monomonial relations.
+The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least parts of these works are very pertinent. This follows the rejection (with the notable exception of Schrodinger) of Eddington\cite{Eddington} himself. Only Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. While he dared to apply the exclusion principle in cosmology, it is the basis of our Single Electron Cosmologic model (section 4.1) which rehabilitates once more his work. Also, fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. Moreover, it seems that no one realizes that the Eddington prediction for the baryon number in the visible Universe is so accurate. Note that many mocked the Eddington Large Number, not to speak of his number 137, completely rehabilitated by the monomonial relations.
 
 However, curiously, Eddington believed in the standard statistical interpretation. Thus, he did not reached the above conclusions. Also, at his epoch the holography was not discovered, and Eddington was far from imagine the Holic Principle. 
 
@@ -1147,7 +1147,7 @@ However, curiously, Eddington believed in the standard statistical interpretatio
 \section {Conclusions: Cosmic Simplicity at work}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-The present article confirms the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-physics, taking the electron reduced Compton wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1D-2D holographic relations, respecting the topologico-algebric Bott period}.
+The present article confirms the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-physics, taking the electron reduced Compton wavelength as unity. \textit {The double logarithm representation was the simplest one, and it appeared later that this was the reunion of a serie of height 1D-2D holographic relations, respecting the topologico-algebric Bott sequence}.
 
 The application of the old direct scientific method, looking for fine tuning between physical parameters lead to a return to the Perfect Cosmological Principle implying a steady-state Cosmos, confirmed by holographic relations. The standard cosmological principle was unduly limited to spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an absolute clock, the dephasage of coherent oscillations between quasars being ruled by the tachyonic celerity.
 
