--- a/test.tex
+++ b/test.tex
@@ -60,7 +60,7 @@ $^9$Lecturer at ENSA Paris Malaquais, France (retired). lgueroult@hotmail.com
 {\small\parbox{11cm}{%
 
 
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series d = 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with composite d quark and massive string, gluon, photon and graviton. The standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the Cosmic Microwave Background (CMB) temperature.  
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series d = 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle, the generalised Holographic Principle and Eddington's Theory must unlock Particle Physics, with composite d quark and massive string, gluon, photon and graviton. The standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of both the Cosmic Microwave Background (CMB) temperature and the mean baryon density.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -1205,12 +1205,12 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It i
 
       This article leads to many predictions, in particular:
 \item 1/  The very large infra-red telescopes will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the imperfect cosmological principle.
-\item 2/ The CMB temperature will appear invariant. 
-\item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce composite quark down and massive photon, graviton and gluons. Also the supersymmetry will restablish the Eddington's connection Proton-Tau.
+\item 2/ The CMB temperature and the baryon mean density will appear temporal invariant. 
+\item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce composite quark down and massive photon, graviton, gluons and string. Also the supersymmetry will restablish the Eddington's connection Proton-Tau.
 \item 4/ The computational software should be boosted by the principle of multi-base computation.
 \item 5/ The DNA chain will reveal as a 1D temporal hologram, see \cite{Widom}.
 \item 6/ The Lucas-Lehmer series, in connection with the canonical generators ($\sqrt{n}+\sqrt{(n+1)}$), especially the Planck-Fermat's one ($1+\sqrt2$) will define $a$.
-\item 7/ The Monster group will be connected to the pariah groups, especially the Janko one $J_3$.
+\item 7/ The Monster group will be connected to the  groups, especially the Suzuki and the Matthieu groups. Also the pariah Janko $J_3$, and the Titts group will reveal a central pertinence.
 \item 8/ The Eddington's Fundamental Theory will be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 \item 9/ The Moulin systemic approach will be reconsidered.
 \end{itemize}
