--- a/test.tex
+++ b/test.tex
@@ -60,7 +60,7 @@ $^9$Lecturer at ENSA Paris Malaquais, France (retired). lgueroult@hotmail.com
 {\small\parbox{11cm}{%
 
 
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series d = 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle, the generalised Holographic Principle and Eddington's Theory must unlock Particle Physics, with composite d quark and massive string, gluon, photon and graviton. The standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of both the Cosmic Microwave Background (CMB) temperature and the mean baryon density.  
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series d = 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle, the generalised Holographic Principle and Eddington's Theory must unlock Particle Physics, with composite d quark and massive string, gluon, photon and graviton. The standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of both the Cosmic Microwave Background (CMB) temperature and the mean density.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
