--- a/test.tex
+++ b/test.tex
@@ -980,11 +980,11 @@ O_M \approx d_e J_3^7 \sqrt{p/p_0}
 \end{equation}
 \textit{The above relations proves that physics establish unexpected bridges between sporadic groups, including the Titts one}.
 
-With $\delta_K = p_K^2/a^3 $, and the symetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
+The study of the BH entropy of the Grandcosmos leads to the confirmation of the holic complete dimension 210 (12 ppm, 100 ppm, 42 ppm):
 \begin{equation}
-(1/2\pi^{3/2})(R_{GC}/l_P^{\prime})^4 \approx (\delta_K O_M )^9 e^{1/2a} \approx  \mu^{210}/4\pi \approx \tau^{137}
+\mu^{210} \approx \pi^{-3/2})(R_{GC}/l_P)^4 \approx 4\pi \tau^137 (a/137)^2 \approx O_M^9 lnD (p/n)^2
 \end{equation}
-The existence of a Final Theory based on the Holic Principle (section 6), the Grandcosmos and the Koide-Sanchez constant cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}
+Thus the expected correlation \cite{Witten} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The fine-tuning with basic mathematical constants}
