--- a/test.tex
+++ b/test.tex
@@ -1081,12 +1081,18 @@ where $\mu$ is the Muon/Electron mass ratio, \textit{inside its 20 ppb undetermi
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation}
+From the Koide relation, the corresponding value is $\tau \approx 3477.441701$, tied to the economic number (0.6 ppm):
+\begin{equation}
+e^{e^e} \approx \tau (2a)^3/137^2
+\end{equation}
+From $\tau \approx e^{3e}$ and $8a \approx e^7$, this illustrates the reduction $e^e \approx 7 + 3e$. The pertinence of the economic number is confirmed.
+
 Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
 development of $\pi$ is to this date an unsolved problem, \textit{this confirms that current mathematics is
 incomplete and that Nature uses rational approximations of $\pi$}.
 
-These relations show a dual form, the first one without any numerical factor:
+The above relations show a dual form, the first one without any numerical factor:
 \begin{equation}
 ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
 \end{equation}
