--- a/test.tex
+++ b/test.tex
@@ -216,8 +216,9 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
 \section {The Cosmic Fine-Tuning and the Topological Axis}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics. The most famous fine tuning implies cosmic quantities, awkwardly called the `Double Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious clue in the steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
+We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics. The most famous fine tuning implies cosmic quantities, awkwardly called the `Double Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious clue in the steady-state cosmology based on the above \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
 This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
+
 This defines the Universe Hubble radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with the Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$. This is a significant refutation of the standard cosmology, but the fact that the so-called Universe age is $\approx 13.8~yr$ cannot be due to chance. This means that the standard approch has something right, but the interpretation is false.
 
 Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: 
