--- a/test.tex
+++ b/test.tex
@@ -762,7 +762,7 @@ meaning that \textit{the ratio $a/137$ acts as a canonical ratio}.
 
 Considering the product of the T.A. dimensions:
 \begin{equation}
-P_d = \Pi_{k=7}^{k=0}(4 k + 2) = g_{Suz}/2^73^45^27^111^113^1
+P_d = \Pi_{k=7}^{k=0}(4 k + 2) = 2^83^45^27^111^113^1
 \end{equation}
 which is a simple sub-multiple of the cardinal order of the Suzuki group, and a simple multiple of the three other sporadic groups $M_{11}, M_{12}$ and $J_2$ \cite{Aschbacher}.
 With $l_W$ the mean of the CMB and CNB Wien lengths (0.06 \%):
@@ -1327,6 +1327,8 @@ treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
 \bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles'. Phys. Vol. 7, number 5, 595-6.
+
+\bibitem{Aschbacher} Aschbacher H. Finite Group Theory. C.U.P. 242-248 (2000). 
 
 \bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. {\it https://www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/}.
 
