--- a/test.tex
+++ b/test.tex
@@ -985,7 +985,7 @@ The study of the BH entropy of the Grandcosmos leads to the confirmation of the 
 \begin{equation}
 \mu^{210} \approx \pi^{-3/2})(R_{GC}/l_P)^4 \approx 4\pi \tau^137 (a/137)^2 \approx O_M^9 lnD (p/n)^2
 \end{equation}
-Thus the expected correlation \cite{Witten} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}
+Thus the expected correlation \cite{Witten} \cite{Sanchez5} of $lnD$ with $4\pi$ is confirmed. The existence of a Final Theory based on the Holic Principle (section 6) and the Grandcosmos cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The fine-tuning with basic mathematical constants}
@@ -1311,7 +1311,7 @@ Two Times''. Phys. Rev. D 58 (1998); hep-th/9803188,
 de Bott''. I. Seminaire Henri Cartan, Tome 12 (1959-1960) no. 2, Expose no. 16,
 p. 1--16.
 
-\bibitem{Sanchez4} Sanchez F; M. ``Holic Principle: The coherence of the Universe`` (Sept 1995), Entelechies, 16th ANPA, 324--344.
+\bibitem{Sanchez4} Sanchez F. M. ``Holic Principle: The coherence of the Universe`` (Sept 1995), Entelechies, 16th ANPA, 324-344.
 
 \bibitem{Grosmann} Grosmann, M. and Meyrueis P. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979.
 
@@ -1372,6 +1372,11 @@ Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
 CRAS. Paris 305, Ser. II, 349--352 (1987).
 
 \bibitem{Atiyah2} Atiyah Michael, ``Private communication`` (December 2018).
+
+\bibitem{Witten} Witten E. The Three-Dimensional Gravity Revisted. arxiv.org/abs/076.3359
+
+\bibitem{Sanchez5} Sanchez F.M. Electrical Moonshine. vixra:1801:0067 
+
 
 \end{thebibliography}
 \vspace*{-6pt}
